Overall code inspection.